--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wundergraph-nextjs-app-dir",
+  "name": "dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "wundergraph": "wunderctl up --debug",
     "build": "wunderctl generate && next build",
     "lint": "next lint",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "@graphql-yoga/node": "^2.13.13",
@@ -16,21 +16,23 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@wundergraph/sdk": "^0.178.1",
+    "@nextui-org/react": "1.0.0-beta.12",
+    "apexcharts": "^3.35.5",
+    "next-themes": "^0.2.1",
     "autoprefixer": "10.4.14",
     "graphql": "^16.6.0",
     "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@jest/globals": "^29.6.2",
-    "@types/jest": "^29.5.3",
     "concurrently": "^8.0.1",
     "cross-fetch": "^3.1.6",
-    "jest": "^29.6.2",
-    "ts-jest": "^29.1.1"
+    "vitest": "^0.34.6",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
+    "typescript": "5.0.4"
   }
 }
