--- a/package.json
+++ b/package.json
@@ -12,27 +12,30 @@
   },
   "dependencies": {
     "@graphql-yoga/node": "^2.13.13",
+    "@nextui-org/react": "^2.1.13",
     "@types/node": "20.2.4",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@wundergraph/sdk": "^0.178.1",
-    "@nextui-org/react": "1.0.0-beta.12",
     "apexcharts": "^3.35.5",
-    "next-themes": "^0.2.1",
-    "autoprefixer": "10.4.14",
+    "framer-motion": "^10.16.4",
     "graphql": "^16.6.0",
     "next": "13.4.4",
-    "postcss": "8.4.23",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "concurrently": "^8.0.1",
     "cross-fetch": "^3.1.6",
-    "vitest": "^0.34.6",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
-    "typescript": "5.0.4"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.0.4",
+    "vitest": "^0.34.6"
   }
 }
